// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Associated Buildings/Parcels view Associated buildings list renders correctly 1`] = `
<div
  class="list-group"
>
  <p
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Buildings
  </p>
  <div
    class="list-group-item"
  >
    This parcel has no associated buildings
  </div>
</div>
`;

exports[`Associated Buildings/Parcels view Associated parcels list renders correctly 1`] = `
<div
  class="list-group"
>
  <p
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Land
  </p>
  <div
    class="list-group-item"
  >
    <p>
      000-000-000
    </p>
  </div>
</div>
`;
